<resources>
    <string name="fileprovider">com.yourname.yourappname.components.fileprovider</string>
    <string name="app_name">MyGamingCollection</string>
    <string name="app_name_separated">My Gaming Collection</string>
    <string name="see_full_collection">See collection</string>
    <string name="add_new_item">New Item</string>
    <string name="search_item_in_collection">Search Item</string>
    <string name="choose_option">OPTIONS</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="login_signin_title">Login/Sign-In</string>
    <string name="register_a">"Register a "</string>
    <string name="register_b"> new account</string>
    <string name="empty_username_text">*User email cannot be empty</string>
    <string name="invalid_username_text">*Valid email is required</string>
    <string name="empty_string"/>
    <string name="user_email">User Email</string>
    <string name="user_password">User Password</string>
    <string name="password_is_empty">*Password field required</string>
    <string name="weak_password">*Password is weak. 8 chars minimum. \n(At least 1 lower, 1 cap, 1 number and 1 symbol).</string>
    <string name="must_enter_an_email">Email field must be filled.</string>
    <string name="want_to_quit_question">Do you want to exit the app?</string>
    <string name="want_to_come_back_to_login">Back to Login Screen?</string>
    <string name="confirm_title">Exit confirmation</string>
    <string name="new_user_email">Your Email Address</string>
    <string name="new_user_password">New Password</string>
    <string name="new_user_repeat_password">Repeat Password</string>
    <string name="new_user_repeat_password_doesnt_match">Passwords doesnt match</string>
    <string name="new_user_register">Register</string>
    <string name="forgot_password_string">Forgot password?</string>
    <string name="no_network_available">Must be connected to a net.</string>
    <string name="no_network_available_for_images">Images not loaded. Connect and restart app.</string>
    <string name="authentication_failed">Authentication Failed.</string>
    <string name="registration_failed">Registration Failed.</string>
    <string name="servers_client_id">Your own google server user id xxxxxxxxxxx-xxxxxxxxxxxxxxxxxxxx.apps.googleusercontent.com</string>
    <string name="authentication_succeed">Authenticated!</string>
    <string name="email_reset_text">Check emails for instructions to change password</string>
    <string name="we_sent_email">We have sent you an email.</string>
    <string name="exit_app">Do you want to exit?</string>
    <string name="type_of_item">Type of item:</string>
    <string name="pick_an_option">Choose an option</string>
    <string name="item_brand">Item Brand:</string>
    <string name="item_complete_state">Item Completeness:</string>
    <string name="item_region">Item Region:</string>
    <string name="item_is_modded">Has the item been modded?:</string>
    <string name="item_purchase_currency">Purchase currency:</string>
    <string name="item_name">Item Name:</string>
    <string name="item_model">Item Model:</string>
    <string name="price_string">Price:</string>
    <string name="send_buttom_text">Send</string>
    <string name="year_text">Year:</string>
    <string name="pick_a_date_string">Pick a year</string>
    <string name="must_enter_name">Name field is required*</string>
    <string name="must_enter_model">Model field is required*</string>
    <string name="new_item_inserted_successfully">New Item Successfully created!</string>
    <string name="loading_text">...loading...</string>
    <string name="update_db_string">Update registry</string>
    <string name="wish_to_update_db_string">Would you like to update this item?</string>
    <string name="erase_db_string">Erase Item:</string>
    <string name="wish_to_erase_db_string">Would you like to erase this item?</string>
    <string name="front_description">Front side of game box</string>
    <string name="back_description">Backside of the game box</string>
    <string name="cart_description">Game label</string>
    <string name="registry_not_updated">Update unsuccessful!</string>
    <string name="item_updated">Item got successfully updated!</string>
    <string name="synchronize_database">Sync</string>
    <string name="logout_string">Logout</string>
    <string name="would_you_logout">Do you wish to logout?</string>
    <string name="upload_new_pictures">Upload pictures</string>
    <string name="user_been_disabled">This user has been disabled.</string>
    <string name="you_arent_conected_to_net">Internet conexion is required.\nConnect to the internet and restart the app.</string>
    <string name="restart_app">Click to Restart</string>
    <string name="enter_search_term">Search Item Name</string>
    <string name="enter_item_name">Enter Item Name (letters and numbers only)</string>
    <string name="wrong_values_warning">Tip: Letters and numbers only.</string>
    <string name="pick_a_region">Pick a region</string>
    <string name="pick_a_brand">Pick a brand</string>
    <string name="click_on_each_image_to_open_picture">Click on each picture to take/select a picture.</string>
    <string name="you_need_to_enable_camera_permissions">Manually enable Camera and Photos and Videos permission and restart app.</string>
    <string name="modal_bottom_sheet_title">Choose Option</string>
    <string name="open_picture">Choose Picture</string>
    <string name="open_camera">Use Camera</string>
    <string name="add_permission_text">Add %s</string>
    <string name="would_grant_permission">Would you like to grant %s ?</string>
    <string name="do_you_upload_new_pictures">Upload New Pictures.</string>
    <string name="would_you_upload_new_pictures">Would you like to upload this pictures?</string>
    <string name="reset_pictures">Reset Pictures</string>
    <string name="front_picture_text">Frontside picture of your items box.</string>
    <string name="back_picture_text">Backside picture of your items box.</string>
    <string name="cart_picture_text">Frontside picture of your item.</string>
    <string name="would_you_reset_pictures">Would you like to erase all the pictures?</string>
    <string name="fields_arent_filled">Fields above are required.</string>
    <string name="change_theme_text">Change Theme</string>
    <string name="change_password_text">Change Password</string>
    <string name="erase_everything_in_db">Erase full collection</string>
    <string name="would_you_change_password">Would you like to change your password?</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="reenter_new_password">Confirm new password</string>
    <string name="passwords_are_different">The two passwords must match.</string>
    <string name="password_updated">Password successfuly updated!\nLogout and login to update.</string>
    <string name="failed_to_update_password">Failed to update password.</string>
    <string name="password_visible_string">Set password visible</string>
    <string name="erase_collection_string">Erase Full Collection</string>
    <string name="would_you_erase_full_collection">Would you like to erase everything?</string>
    <string name="leave_title">Close App?</string>
    <string name="would_you_leave">Do you wish to leave the app?</string>
    <string name="beautified_app_name">Game Collection</string>
    <string name="new_item_inserted_failure">Failed to create item.</string>
    <string name="price_zero_title">Warning!</string>
    <string name="price_zero_text">You set price set to 0, are you sure?</string>
</resources>