...
                )}
            },
        navigationIcon = {
            IconButton(enabled = true, onClick = {
                onNavigationIconClick()
            }) {
                Icon(imageVector = Icons.Default.Menu, contentDescription = "open_close_drawer", modifier = Modifier.semantics { contentDescription = "open_close_drawer" })
            }
        },
        colors = TopAppBarColors(
            actionIconContentColor = Color.Blue,
            navigationIconContentColor = Color.Blue,
            containerColor = MaterialTheme.colorScheme.primaryContainer,
...
