...
    }, modifier = Modifier.padding(vertical = 4.dp)) { Text(text = stringResource(id = R.string.login)) }

    ElevatedButton(
        colors = ButtonDefaults.buttonColors(containerColor = Color.White, contentColor = Color.Black),
        modifier = Modifier
            .fillMaxWidth()
            .padding(top = 16.dp, start = 16.dp, end = 16.dp).testTag("login_button"),
        elevation = ButtonDefaults.elevatedButtonElevation(4.dp),
        onClick = {
            getGoogleCredentials(context, signInWithGoogleOptionButton, coroutineScope, userViewModel, screenViewModel)
        },
        shape = RoundedCornerShape(6.dp)) {
        Row (modifier = Modifier, horizontalArrangement = Arrangement.Center){
...
